fix: heading wrap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -180,6 +180,7 @@
 
   :where(h1, h2, h3, h4, h5, h6, summary strong, legend) {
     font-weight: var(--font-weight-bold);
+    text-wrap: balance;
     overflow-wrap: break-word;
     hyphens: auto;
   }
